// LINT: LEGACY_NAMES
syntax = "proto3";

package google.test.remote.web.model;

option java_package = "androidx.test.espresso.web.proto.model";

import "google/protobuf/any.proto";

message CastOrDieAtomProto {
  string id = 1;
  bytes clazz = 2;
}

message ElementReferenceProto {
  string id = 1;
  bytes opaque = 2;
}

message WindowReferenceProto {
  string id = 1;
  bytes opaque = 2;
}

message ScriptWithArgsSimpleAtomProto {
  string id = 1;
  string script = 2;
  repeated bytes args = 3;
}

message TransformingAtomProto {
  string id = 1;
  google.protobuf.Any parent = 2;
  google.protobuf.Any transformer = 3;
}
