// LINT: LEGACY_NAMES
syntax = "proto3";

package google.test.remote.web.webdriver;

option java_package = "androidx.test.espresso.web.proto.webdriver";

import "google/protobuf/any.proto";

message FindElementSimpleAtomProto {
  string id = 1;
  bytes locatorType = 2;
  bytes value = 3;
}

message FindElementTransformingAtomProto {
  string id = 1;
  google.protobuf.Any findElementSimpleAtom = 2;
  google.protobuf.Any castOrDieAtom = 3;
}

message ClearElementSimpleAtomProto {
  string id = 1;
}

message WebKeysSimpleAtomProto {
  string id = 1;
  bytes text = 2;
}

message WebClickSimpleAtomProto {
  string id = 1;
}

message GetTextTransformingAtomProto {
  string id = 1;
  google.protobuf.Any getTextSimpleAtom = 2;
  google.protobuf.Any castOrDieAtom = 3;
}

message GetVisibleTextSimpleAtomProto {
  string id = 1;
}

message ActiveElementSimpleAtomProto {
  string id = 1;
}

message SelectActiveElementTransformingAtomProto {
  string id = 1;
  google.protobuf.Any selectActiveElementSimpleAtom = 2;
  google.protobuf.Any castOrDieAtom = 3;
}

message FrameByIndexSimpleAtomProto {
  string id = 1;
  bytes index = 2;
}

message FrameByIndexWithRootSimpleAtomProto {
  string id = 1;
  bytes index = 2;
  google.protobuf.Any root = 3;
}

message SelectFrameByIndexTransformingAtomProto {
  string id = 1;
  google.protobuf.Any frameByIndexSimpleAtom = 2;
  google.protobuf.Any castOrDieAtom = 3;
}

message FrameByIdOrNameSimpleAtomProto {
  string id = 1;
  bytes idOrName = 2;
}

message FrameByIdOrNameWithRootSimpleAtomProto {
  string id = 1;
  bytes idOrName = 2;
  google.protobuf.Any root = 3;
}

message SelectFrameByIdOrNameTransformingAtomProto {
  string id = 1;
  google.protobuf.Any frameByIndexOrNameSimpleAtom = 2;
  google.protobuf.Any castOrDieAtom = 3;
}

message FindElementsScriptSimpleAtomProto {
  string id = 1;
  bytes locatorType = 2;
  bytes value = 3;
}

message FindMultipleElementsTransformingAtomProto {
  string id = 1;
  google.protobuf.Any findElementsScriptSimpleAtom = 2;
  google.protobuf.Any elementReferenceListAtom = 3;
}

message ElementReferenceListAtomProto {
  string id = 1;
  bytes locatorType = 2;
  bytes value = 3;
}

message WebScrollIntoViewSimpleAtomProto {
  string id = 1;
}

message WebScrollIntoViewAtomProto {
  string id = 1;
  google.protobuf.Any scrollIntoViewSimpleAtom = 2;
  google.protobuf.Any castOrDieAtom = 3;
}
